--- a/portofolio.html
+++ b/portofolio.html
@@ -25,7 +25,7 @@
             <figcaption>
               <h5 class="name">Project Web School
               <span>
-                  <a href="../htmlcsspart2/index.html">Detail</a>
+                  <a href="https://ekawebschool.netlify.app/">Detail</a>
                 </span>
               </h5>
             </figcaption>
